--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
  <body>
     	<h1>Welcome to my crib </h1>
     	<p>This is my bed.</p>
-    	<img src="" al="">
+    	<img src="bed" al="">
     	<p>This is my toilet.</p>
-    	<img src="" al="">
+    	<img src="toilet" al="">
     	<p>And this is my bitch.</p>
-    	<img src="" al="">
+    	<img src="bitch" al="">
 
 </body>
 </html>	
