--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     	<link rel="stylesheet" type="text/css" href="style.css">	
  </head>
  <body>
+    <div id="main">
     	<h1>Welcome to my crib </h1>
-    	<p>This is my bed.</p>
-    	<img src="bed.jpg" al="">
-    	<p>This is my toilet.</p>
-    	<img src="toilet.jpg" al="">
+        <p>Get to know my favourite things of my crib.</p>
+        <div class="article1">
+    	    <p>This is my bed.</p>
+    	    <img src="bed.jpg" al="">
+        </div>
+        <div class="article2">
+    	    <p>This is my toilet.</p>
+    	    <img src="toilet.jpg" al="">
+        </div>
+        <div class="article3">
     	<p>And this is my bitch.</p>
     	<img src="bitch.jpg" al="">
+    </div>
+</div>
 
 </body>
 </html>	
