styling section and articles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="main">
     	<h1>Welcome to my crib </h1>
         <p>Get to know my favourite things of my crib.</p>
+        </section>
         <div class="article1">
     	    <p>This is my bed.</p>
     	    <img src="bed.jpg" al="">
@@ -21,6 +22,7 @@
     	<p>And this is my bitch.</p>
     	<img src="bitch.jpg" al="">
     </div>
+</section>
 </div>
 
 </body>
