--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
  <body>
     <div id="main">
     	<h1>Welcome to my crib </h1>
-        <p>Get to know my favourite things of my crib.</p>
+        <p class="tagline" >Get to know my favourite things of my crib.</p>
         </section>
-        <div class="article1">
+        <div class="article">
     	    <p>This is my bed.</p>
-    	    <img src="bed.jpg" al="">
+    	    <img src="bed.jpg" alt="">
         </div>
-        <div class="article2">
+        <div class="article">
     	    <p>This is my toilet.</p>
-    	    <img src="toilet.jpg" al="">
+    	    <img src="toilet.jpg" alt="">
         </div>
-        <div class="article3">
+        <div class="article">
     	<p>And this is my bitch.</p>
-    	<img src="bitch.jpg" al="">
+    	<img src="bitch.jpg" alt="">
     </div>
 </section>
 </div>
