description and analytics, links

--- a/index.html
+++ b/index.html
@@ -10,20 +10,45 @@
     	<h1>Welcome to my crib </h1>
         <p class="tagline" >Get to know my favourite things of my crib.</p>
         </section>
-        <div class="article">
-    	    <p>This is my bed.</p>
-    	    <img src="bed.jpg" alt="">
-        </div>
-        <div class="article">
-    	    <p>This is my toilet.</p>
-    	    <img src="toilet.jpg" alt="">
-        </div>
-        <div class="article">
-    	<p>And this is my bitch.</p>
-    	<img src="bitch.jpg" alt="">
-    </div>
+               <div class="article">
+                  <a href="https://ars.electronica.art/news/en/" 
+                  target="_blank">
+                    <img src="bed.jpg" alt="">
+                     </a>
+                     <h2></h2>
+    	    <h2>This is my bed.</h2>
+            <p>El arte posmoderno, por oposición al arte moderno, es el propio de la posmodernidad,  es una teoría socio-cultural que postula la vigencia de un periodo histórico que habría superado el proyecto moderno (es decir, la raíz cultural, política y económica propia de la Edad Contemporánea).<p> 
+             </div>
+            
+            <div class="article">
+             <a href="https://asco.media/" 
+             target="_blank">
+             <img src="toilet.jpg" alt="">
+             <a/>
+    	    <h2>This is my toilet.</h2>
+             <p>El arte posmoderno, por oposición al arte moderno, es el propio de la posmodernidad,  es una teoría socio-cultural que postula la vigencia de un periodo histórico que habría superado el proyecto moderno (es decir, la raíz cultural, política y económica propia de la Edad Contemporánea).<p> 
+             </div>
+    	    
+             <div class="article">
+                <a href="https://www.netflix.com/browse" 
+                  target="_blank">
+                  <img src="bitch.jpg" alt="">
+         </a>
+         <h2>And this is my bitch.</h2>
+         <p>El arte posmoderno, por oposición al arte moderno, es el propio de la posmodernidad,  es una teoría socio-cultural que postula la vigencia de un periodo histórico que habría superado el proyecto moderno (es decir, la raíz cultural, política y económica propia de la Edad Contemporánea).<p> 
+         </div>
+
 </section>
 </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161787643-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-161787643-1');
+</script>
 
 </body>
 </html>	
