--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
     	<meta charset="UTF-8">
     	<title>Pineapple express</title>
-    	<link rel="stylesheet" type="text/css" href="style.css">	
+    	<link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
+	
  </head>
  <body>
     <div id="main">
